# emb-agent

./: README.md  config.json
.claude/: settings.json
docs/: agent-workflow.puml  rag-skill-delivery.md  todo.md
docs/code/: 00_overview.md  01_main.md  02_config.md  03_bus.md  04_providers.md  (+4 more)
emb-agent/: .gitignore  CLAUDE.md  README.md  pyproject.toml
emb-agent/emb_agent/: __init__.py  __main__.py  prompts.py
emb-agent/emb_agent/agent/: __init__.py  core.py
emb-agent/emb_agent/bus/: __init__.py  queue.py
emb-agent/emb_agent/config/: __init__.py  loader.py
emb-agent/emb_agent/knowledge/: __init__.py
emb-agent/emb_agent/providers/: __init__.py  base.py  litellm_provider.py
emb-agent/emb_agent/session/: __init__.py
emb-agent/emb_agent/skills/: __init__.py
emb-agent/emb_agent/skills/rag_skill/: SKILL.md  __init__.py  api_client.py
emb-agent/emb_agent/tools/: __init__.py  base.py  deploy.py  filesystem.py  knowledge.py  monitor.py  network_scan.py  registry.py  shell.py
emb-agent/tests/: test_rag_skill.py
emb-agent/workspace/knowledge/: linux_kernel_driver.md  phytium_platform.md
emb-agent/workspace/knowledge/飞腾相关文档/: README.md
emb-agent/workspace/knowledge/飞腾相关文档/open-amp/: rpmsg-demo-double.c  rpmsg-demo.c
emb-agent/workspace/knowledge/飞腾相关文档/optee/: README.md
emb-agent/workspace/projects/led_driver/: 99-led-driver.rules  Kbuild  Makefile  README.md  led_driver.c
emb-agent/workspace/projects/led_driver/test_app/: Makefile  test_led.c
srs/: emb-agent-SRS.md
技术文档/: 功能测试表.csv  功能需求列表.csv  技术文档内容预览页.md  系统架构设计.md  系统详细设计.md  风险分析与管控.md
(+34 files in other folders)
