[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emb-agent"
version = "0.1.0"
description = "Embedded System Program Optimization Agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "litellm>=1.0.0",
    "json-repair>=0.20.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
emb-agent = "emb_agent.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["emb_agent"]
